export enum UserType {
  STUDENT = 'student',
  MENTOR = 'mentor',
  ADMIN = 'admin'
}