export enum TaskStatus {
  TODO = 'to do',
  IN_PROGRESS = 'in progress',
  ON_REVIEW = 'on review',
  DONE = 'done'
}